Bug 11565 [QA Followup] - Hide checkout options when not in use
This follow-up reformats the checkout screen so that checkout settings
like specify due date, on-site checkout, and override high holds are
grouped in a panel which is hidden by default. Clicking a link shows all
the available settings.

Also modified in this patch: The default color for div.hint has been
made a little darker for readability.

To test, apply the patch and clear your browser cache if necessary.

- Check out to a patron who is not blocked from checking out.
- Click the "Checkout settings" link and confirm that the settings panel
  is displayed.
- Test that the settings in the panel behave as expected.
- Test with preferences on and off: decreaseLoanHighHolds,
  OnSiteCheckouts, SpecifyDueDate.

NOTE: This patch is a work in progress. It does not address the issue of
checkout setting being hidden even if they are active.

--- a/koha-tmpl/intranet-tmpl/prog/en/css/staff-global.css
+++ b/koha-tmpl/intranet-tmpl/prog/en/css/staff-global.css
@@ -517,12 +517,11 @@ fieldset.brief ol, fieldset.brief li {
 }
 
 .hint {
-	color : #999999;
+    color : #666;
 	font-size : 95%;
 }
 
 fieldset.brief div.hint, fieldset.rows div.hint, div.yui-u div.hint {
-	font-size : 95%;
 	margin-bottom : .4em;
 }
 
@@ -1006,30 +1005,38 @@ tr.highlight th[scope=row] {
 	border-color : #BCBCBC;
 }
 
-#circ_circulation_issue label {
-	font-size: 105%;
-	font-weight : bold;
+label.circ_barcode {
+    font-size: 105%;
+    font-weight : bold;
 }
 
-#circ_circulation_issue div.hint {
-	color : #666666;
-	margin: .2em 0;
-}
-
-.date-select,
-.onsite_checkout-select {
+.checkout-setting {
     font-size : 85%;
     padding-top : .3em;
 }
 
-#circ_circulation_issue .date-select label,
-.date-select label {
+.checkout-setting label {
     font-size : inherit;
     font-weight: normal;
 }
 
-.date-select input {
+.checkout-setting input {
     vertical-align: middle;
+}
+
+.checkout-settings {
+    background-color: #f4f8f9;
+    border-radius: 0;
+    border-top: 2px solid #b9d8d9;
+    display: none;
+    margin-left: -1em;
+    margin-right: -1em;
+    margin-top: 1em;
+    padding: 1em 1em 0;
+}
+
+#show-checkout-settings {
+    margin-top: .5em;
 }
 
 tr.expired td {
